# NegotiateAIGenf

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json
docs/: architecture.md  data_quality_checks.md  (+1 more)
orchestration/fastapi/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
orchestration/fastapi/src/: api.py  settings.py  worker.py
orchestration/fastapi/src/data/processed/: metadata_session_1.json  metadata_session_2.json  metadata_session_3.json  metadata_session_4.json  metadata_session_5.json
orchestration/fastapi/src/data/raw/: draft_category_mapper_session_5_manually.json  metadata_session_1.json  metadata_session_2.json  metadata_session_3.json  metadata_session_3_manually.json  metadata_session_3_manually_finished.json  metadata_session_4.json  metadata_session_4_manually.json  metadata_session_4_manually_finished.json  metadata_session_5.json  metadata_session_5_manually_finished.json  unmapped_authors_manually.json
orchestration/fastapi/src/models/: __init__.py  submissions.py
orchestration/fastapi/src/routers/: ai_tools.py  healthz.py  submissions.py
orchestration/fastapi/src/scraper/: generic_scraper.py  helper.py  scrape_old_sessions.py  session_1_processing.py  session_2_processing.py  session_3_processing.py  session_4_processing.py  session_5_scraping.py  sessions.json
orchestration/fastapi/src/scripts/: __main__.py  create_collections.py  data_verification.py  download_sandbox.py  import_authors.py  import_session_data.py  import_sessions.py  import_topics.py  preprocess_authors.py  preprocess_titles.py  preprocess_topics.py  seed_database.py
orchestration/fastapi/src/security/: api_token.py  ratelimit.py
orchestration/fastapi/src/tasks/: __init__.py  augment.py  embed.py  synchronize.py
orchestration/fastapi/src/tests/: test_api_token.py  test_rate_limiting.py
orchestration/fastapi/src/tools/: analyse_submissions.py  llm_provider.py  query_submissions.py  summarize_submissions.py
orchestration/fastapi/src/vector_database/: session.py
(+210 files in other folders)
